Setup the GC and export/opens statements correctly for SE 11 through 17
Signed-off-by: Scott M Stark <starksm64@gmail.com>